# gcn_parser

./: .gitignore  EP260131a.csv  LICENSE  README.md  pyproject.toml
examples/: example.py
gcn_circular_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gcn_parser/: __init__.py  archive.py  cli.py  csv_export.py  extractor.py  models.py
gcn_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_csv_export.py  test_extractor.py  test_models.py
